IM BACK BITCHES

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     // Apply the java plugin to add support for Java
     id 'java'
+    id 'application'
 }
 
 repositories {
@@ -21,4 +22,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13.2'
+}
+application {
+    mainClassName = 'RivalMatch.api.App'
 }
